--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,16 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    def cardview_version = "1.0.0"
+
+    implementation "androidx.cardview:cardview:$cardview_version"
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0-rc01'
+
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation 'com.mikhaellopez:circularimageview:4.1.0'
+    implementation 'com.android.support:design:29.0.0'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 }
