--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SliderActivity"></activity>
-        <activity android:name=".SplashScreen">
+        <activity android:name=".HomeDashActivity"></activity>
+        <activity android:name=".SliderActivity" />
+        <activity
+            android:name=".SplashScreen"
+            android:theme="@style/WhiteThemeTransparent">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/WhiteThemeTransparent"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
